improv in messages, moved some data to domains